# emustream

./: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  start.ps1
backend/: Cargo.toml  Dockerfile.dev  Dockerfile.prod
backend/src/: db.rs  error.rs  macros.rs  main.rs  main_test.rs  middleware.rs  models.rs  routes.rs  traits.rs
backend/src/api/: auth.rs  games.rs  mod.rs
frontend/: Dockerfile.dev  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/components/: Canvas.svelte
frontend/src/lib/components/containers/: BaseContainerSelectable.svelte  ExempleTable.svelte  HomeContent.svelte  SelectableArea.svelte
frontend/src/lib/components/grid/: GridSimple.svelte
frontend/src/lib/components/ui/: Hr.svelte  Input.svelte  InputFile.svelte  Sidebar.svelte
frontend/src/lib/functions/: api.ts  convert.ts  utils.ts
frontend/src/lib/functions/webgl/: webgl_bitmap.ts
frontend/src/lib/stores/: controller.ts  tokens.ts  user.ts
frontend/src/lib/ts/: convert.ts
frontend/src/lib/types/: api.ts  auth.ts  entities.ts  mapper.ts  sizes.ts  ui.ts
frontend/src/params/: slug.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte  page.svelte.test.ts
frontend/src/routes/(connected)/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/src/routes/(connected)/[console=slug]/: +layout.svelte  (+3 more)
frontend/src/routes/login/: +page.svelte
frontend/static/data/: games.json
wasm/: Cargo.toml
wasm/gameboy/: Cargo.toml  README.md
wasm/gameboy/src/: lib.rs
(+12 files in other folders)
