[package]
name = "emutream_api"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"  # Optimisation pour la taille
lto = true       # Link-Time Optimization
codegen-units = 1
panic = "abort"  # Évite les infos de panic
strip = true     # Supprime les symboles

[dependencies]
async-trait = "0.1.88"
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
jsonwebtoken = "9.3.1"
mongodb = "3.2.3"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
validator = { version = "0.20.0", features = ["derive"] }
